Bugfix for overflow scroll on iOS

--- a/source/css/normalize.scss
+++ b/source/css/normalize.scss
@@ -50,3 +50,9 @@ input[type="submit"] {
    -webkit-appearance: button; // 2 
    cursor: pointer; // 3
 }
+
+html,body {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
